Changes for Perl extension SDL-Tutorial-3DWorld

0.23 to be released
	- Added support for explicit normals in meshes and model files

0.22 Wed 29 Dec 2010
	- The bounding box actor now also displays a traditional
	  red/green/blue axis on the original of each actor.
	- Flying camera renamed as the God camera.
	- All textures now wrap by default removing the need for the
	  Tile class at all.
	- In light of it's expanded role, renamed ::Actor::Box to the
	  more general sounding ::Actor::Debug.
	- We don't need to clear the color buffer when we have a skybox.
	  Clearing only the depth buffer will have the exact same effect.
	- Adding support for a ->{hidden} property on actors that allows
	  them to intentionally make themselves invisible.
	- Left CTRL now provides negative lift to the God-mode camera.
	  i.e. It makes you go vertically downwards.
	- Added F1 toggle to enable/disable debuging actors
	- Added F2 toggle to enable/disable abusively expensive actors

0.21 Tue 28 Dec 2010
	- Adding directory-based asset support, which is needed for linking
	  model files to their supporting texture (etc) files.
	- Reorganised the file parsers into the ::Asset::* namespace.
	- Adding a basic MTL file parser to add materials to OBJ models.
	- Added an actor for showing the contents of a MTL file
	- Added support for transparent materials in MTL files
	- Actor display order is now sorted by descending distance from the camera
	  to allow the alpha blending of transparent and anti-aliased objects
	  to render correctly and prevent objects behind them "dissapearing".
	- Added angle and elevation to the diagnostic console.
	- Rewrote all my camera movement math as it was rotten. The new version is
	  much easier to read and supports holding space down to go "up" in a camera
	  angle relative direction.
	- Added support for bounding boxes to actors.
	- Added a bounding box actor, which is a semi-transparent white line cube